test/positive/gi49-setting-references-with-a-union.cfr
// https://github.com/gsdlab/clafer/issues/49

abstract x -> integer

A : x = 1
B : x = 2
C : x = 3

xs ->> x *
[ xs           = A, B, C ]
[ xs.dref      = A, B, C ]
[ xs.dref.dref = A, B, C ]
