test/failing/gi89-ref-to-constant.cfr
abstract ASIL ->> integer
A : ASIL -> 1
B : ASIL -> 2
C : ASIL -> 3
D : ASIL -> 4

assert [ A.dref = 1 ]
assert [ B.dref = 2 ]
assert [ C.dref = 3 ]
assert [ D.dref = 4 ]
